fix mobile menu text being cut off on left side
Reset desktop transform: translateX(-50%) in mobile breakpoint to prevent
menu content from being shifted off-screen. Also improved hamburger X
animation alignment and switched from display:none to visibility:hidden
for proper slide transition support.

--- a/src/components/client/Navbar/Navbar.module.css
+++ b/src/components/client/Navbar/Navbar.module.css
@@ -58,7 +58,7 @@
 }
 
 .toggleActive span:nth-child(1) {
-  transform: rotate(45deg) translate(8px, 8px);
+  transform: rotate(45deg) translate(5px, 6px);
 }
 
 .toggleActive span:nth-child(2) {
@@ -66,7 +66,7 @@
 }
 
 .toggleActive span:nth-child(3) {
-  transform: rotate(-45deg) translate(7px, -7px);
+  transform: rotate(-45deg) translate(5px, -6px);
 }
 
 .center {
@@ -324,7 +324,7 @@
   }
 
   .center {
-    display: none;
+    display: block;
     position: fixed;
     left: -100%;
     top: 70px;
@@ -334,11 +334,13 @@
     box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
     padding: 2rem 0;
     z-index: 999;
+    visibility: hidden;
+    transform: none;
   }
 
   .centerActive {
-    display: block;
     left: 0;
+    visibility: visible;
   }
 
   .menu {
